--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html>
 
 <head id="head">
-<<<<<<< HEAD
+  
   <link type="text/css" rel="stylesheet" href="/assets/css/style.css"/>
-=======
-  <link type="text/css" rel="stylesheet" href="assets/css/style.css">
->>>>>>> 6019318a0a0c03ea51ef4cfd48764e586659a19e
+ 
   <script src="https://use.fontawesome.com/95e29540f7.js"></script>
   <script src="https://kit.fontawesome.com/76e8df320e.js" crossorigin="anonymous"></script>
 </head>
@@ -14,7 +12,7 @@
 <body id="main">
   <div class="scrollTop" onclick="scrollToTop()"></div>
   <header id="header">
-    <a href="" class="logo"><strong>Levi for Governor</strong></a>
+    <a href="" class="logo"><strong>Levii for Governor</strong></a>
     <ul id="list">
       <li><a href="#"><i class="fab fa-facebook fa-lg"></i></a></li>
       <li><a href="#"><i class="fab fa-twitter fa-lg"></i></a></li>
