--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     </div>
   </div>
 </foot>
-<script src="/assets/js/.js"></script>
+<script src="assets/js/.js"></script>
 </body>
 <footer id="footer">
   <div id="copyright">
