--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     </div>
   </div>
 </foot>
-<script type="text/javascript" src="/assets/js/.js"></script>
+<script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 <footer id="footer">
   <div id="copyright">
