--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head id="head">
-  <link type="text/css" rel="stylesheet" href=""/>
+  <link type="text/css" rel="stylesheet" href="/assets/css/body.css"/>
   <link type="text/css" rel="stylesheet" href="/assets/css/style.css"/>
  
   <script src="https://use.fontawesome.com/95e29540f7.js"></script>
