--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
   <header id="header">
     <a href="" class="logo"><strong>Levi for Governor</strong></a>
     <ul id="list">
-      <li><a href="#"><i id="social" class="fab fa-facebook fa-lg"></i></a></li>
-      <li><a href="#"><i id="social" class="fab fa-twitter fa-lg"></i></a></li>
-      <li><a href="#"><i id="social" class="fab fa-instagram fa-lg"></i></a></li>
+      <div id="social">
+         <li><a href="#"><i class="fab fa-facebook fa-lg"></i></a></li>
+         <li><a href="#"><i class="fab fa-twitter fa-lg"></i></a></li>
+         <li><a href="#"><i class="fab fa-instagram fa-lg"></i></a></li>
+      </div>
       <li><a href="">Sign up for Updates</a></li>
       <li><a href="">Donate Now</a></li>
     </ul>
