--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head id="head">
   
+  <link type="text/css" rel="stylesheet" href="assets/css/mobile_style.css"/>
   <link type="text/css" rel="stylesheet" href="assets/css/style.css"/>
   <link type="text/css" rel="stylesheet" href="assets/css/body_style.css"/>
   
