--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 
 <head id="head">
   
+  <link type="text/css" rel="stylesheet" href="assets/css/header_style.css"/>
+  <link type="text/css" rel="stylesheet" href="assets/css/laptop_style.css"/>
+  <link type="text/css" rel="stylesheet" href="assets/css/tablet_style.css"/>
   <link type="text/css" rel="stylesheet" href="assets/css/mobile_style.css"/>
   <link type="text/css" rel="stylesheet" href="assets/css/style.css"/>
   <link type="text/css" rel="stylesheet" href="assets/css/body_style.css"/>
+  <link type="text/css" rel="stylesheet" href="assets/css/footer_style.css"/>
   
   <script src="https://use.fontawesome.com/95e29540f7.js"></script>
   <script src="https://kit.fontawesome.com/76e8df320e.js" crossorigin="anonymous"></script>
