--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header id="header">
     <a href="" class="logo"><strong>Levi for Governor</strong></a>
     <ul id="list">
-         <li><a href="#"><i class="fab fa-facebook fa-lg"></i></a></li>
+         <li><a href="#"><i class="fab fa-facebook"></i></a></li>
          <li><a href="#"><i class="fab fa-twitter fa-lg"></i></a></li>
          <li><a href="#"><i class="fab fa-instagram fa-lg"></i></a></li>
     </ul>
