--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head id="head">
   
   <link type="text/css" rel="stylesheet" href="assets/css/header_style.css"/>
+  <link type="text/css" rel="stylesheet" href="assets/css/all.css"/>
+  <link type="text/css" rel="stylesheet" href="assets/css/brands.css"/>
+  <link type="text/css" rel="stylesheet" href="assets/css/fontawesome.css"/>
+  <link type="text/css" rel="stylesheet" href="assets/css/solid.css"/>
   <link type="text/css" rel="stylesheet" href="assets/css/laptop_style.css"/>
   <link type="text/css" rel="stylesheet" href="assets/css/tablet_style.css"/>
   <link type="text/css" rel="stylesheet" href="assets/css/mobile_style.css"/>
