--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
   <link type="text/css" rel="stylesheet" href="assets/css/body_style.css"/>
   <link type="text/css" rel="stylesheet" href="assets/css/footer_style.css"/>
   
-  <script src="https://use.fontawesome.com/95e29540f7.js"></script>
-  <script src="https://kit.fontawesome.com/76e8df320e.js" crossorigin="anonymous"></script>
 </head>
 
 <body id="main">
@@ -24,7 +22,7 @@
   <header id="header">
     <a href="" class="logo"><strong>Levi for Governor</strong></a>
     <ul id="list">
-         <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+         <li><a href="#"><i class="fab fa-facebook fa-lg"></i></a></li>
          <li><a href="#"><i class="fab fa-twitter fa-lg"></i></a></li>
          <li><a href="#"><i class="fab fa-instagram fa-lg"></i></a></li>
     </ul>
