--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <link type="text/css" rel="stylesheet" href="assets/css/body_style.css"/>
   <link type="text/css" rel="stylesheet" href="assets/css/footer_style.css"/>
   
+  
+  <script src="https://kit.fontawesome.com/570e38c220.js" crossorigin="anonymous"></script>
 </head>
 
 <body id="main">
