--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <header id="header">
     <a href="" class="logo"><strong>Levi for Governor</strong></a>
     <ul id="list">
-         <li><a href="#"><i class="fab fa-facebook fa-lg"></i></a></li>
-         <li><a href="#"><i class="fab fa-twitter fa-lg"></i></a></li>
-         <li><a href="#"><i class="fab fa-instagram fa-lg"></i></a></li>
+         <li><a href="#"><i class="fab fa-facebook fa-2x"></i></a></li>
+         <li><a href="#"><i class="fab fa-twitter fa-2x"></i></a></li>
+         <li><a href="#"><i class="fab fa-instagram fa-2x"></i></a></li>
     </ul>
     <ul>
       <li><a href="">Sign up for Updates</a></li>
