--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
   </div>
   </div>
   <content>
+    <!--for mobile and laptop only-->
+    <div class="buttons">
+      <ul class="social-buttons">
+        <li><a href="#"><i class="fab fa-facebook fa-lg"></i>Facebook</a></li>
+        <li><a href="#"><i class="fab fa-twitter fa-lg"></i>Twitter</a></li>
+        <li><a href="#"><i class="fab fa-instagram fa-lg"></i>Instagram</a></li>
+      </ul>
+    </div>
+     <!--^^^^for mobile and laptop only^^^^-->
     <div id="content-all">
       <div id="content-wrapper">
         <a name="1. Human Trafficking"></a>
