--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
   </div>
   </div>
   <content>
+    <hr style="width: 1px; border: none; background-color: black;">
     <!--for mobile and laptop only-->
     <div class="buttons">
       <ul class="social-buttons">
