--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </div>
   </div>
   <content>
-    <hr style="width: 1px; border: none; background-color: black;">
+    <hr style="height: 2px; width: 80%; border: none; background-color: black;">
     <!--for mobile and laptop only-->
     <div class="buttons">
       <ul class="social-buttons">
