--- a/index.html
+++ b/index.html
@@ -186,6 +186,13 @@
         </section>
       </div>
     </div>
+    <div class="buttons">
+      <ul class="social-buttons">
+        <li><a href="#"><i class="fab fa-facebook fa-lg"></i>Facebook</a></li>
+        <li><a href="#"><i class="fab fa-twitter fa-lg"></i>Twitter</a></li>
+        <li><a href="#"><i class="fab fa-instagram fa-lg"></i>Instagram</a></li>
+      </ul>
+    </div>
   </content>
 <foot>
   <div id="foot">
