--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
         <li><a href="#"><i class="fab fa-facebook fa-lg"></i>Facebook</a></li>
         <li><a href="#"><i class="fab fa-twitter fa-lg"></i>Twitter</a></li>
         <li><a href="#"><i class="fab fa-instagram fa-lg"></i>Instagram</a></li>
-    </ul>
-    <ul>
-      <li><a href="">Sign up for Updates</a></li>
-      <li><a href="">Donate Now</a></li>
-    </ul>
+      </ul>
+      <ul class="social-buttons">
+        <li><a href="">Sign up for Updates</a></li>
+        <li><a href="">Donate Now</a></li>
+      </ul>
     </div>
      <!--^^^^for mobile and laptop only^^^^-->
     <div id="content-all">
