--- a/index.html
+++ b/index.html
@@ -196,6 +196,10 @@
         <li><a href="#"><i class="fab fa-twitter fa-lg"></i>Twitter</a></li>
         <li><a href="#"><i class="fab fa-instagram fa-lg"></i>Instagram</a></li>
       </ul>
+      <ul class="social-buttons">
+        <li><a href="">Sign up for Updates</a></li>
+        <li><a href="">Donate Now</a></li>
+      </ul>
     </div>
   </content>
 <foot>
